tests/scan/fixtures/validation/negative/clean_pypi_obfs/clean_lib.py
ALPHABET = 'ABCDEFGHIJKLMNOPQRSTUVWXYZ'
DIGITS = '0123456789'
